<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvTodaySteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="@dimen/text_size"
            tools:text="123" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_add_steps"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edtAddSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/text_add_steps_hint"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btnAddSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="startStepAdd"
                android:tag="0"
                android:text="@string/btn_add_step" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="随机增加步数: "
            android:textSize="@dimen/text_size"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/randomSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                tools:text="123" />

            <TextView
                android:id="@+id/randomStepsTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/text_size"
                tools:text="09:00:33-20:30:33" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fifty_dp"
                android:onClick="randomAdd"
                android:text="增加随机数"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fifty_dp"
                android:onClick="resetRandom"
                android:text="重置随机数"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/btnAddRandomSteps"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fifty_dp"
                android:onClick="startStepAdd"
                android:tag="1"
                android:text="@string/btn_add_step"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Switch
            android:id="@+id/swhAutoAddSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center_vertical"
            android:text="@string/text_new_day_auto_add_step"
            android:textSize="@dimen/text_size"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnCheckSteps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginTop="30dp"
            android:onClick="checkSteps"
            android:text="@string/btn_check_step" />
    </LinearLayout>
</LinearLayout>